--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -2,29 +2,12 @@
 
 button {
     transition: 1s ease;
-    background: $negative-color;
+    color: white;
+    background: $grey-color;
     font-weight: bold;
     width: 150px;
     height: 50px;
     box-shadow: 10px 10px 0px rgba(0, 0, 0, 0.90), 0 1px 2px rgba(0, 0, 0, 1);
-    &.close {
-        width: 50px;
-        height: 50px;
-        color: white;
-        background-color: $grey-color;
-        grid-column: 2;
-        justify-self: end;
-    }
-
-    &.abort {
-        grid-column: 1;
-        background-color: $positive-color;
-    }
-
-    &.delete {
-        grid-column: 2;
-        text-transform: uppercase;
-    }
 }
 
 button:hover {
