--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,11 @@ body {
     margin: 0;
 }
 
-div {
+.app {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
 }
