--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,7 @@ body {
     margin: 0;
 }
 
-.app {
-    position: relative;
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
