added: snackbar type of content and color change feature

--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -1,3 +1,5 @@
-$negative-color: #ff7979;
-$positive-color: #badc58;
-$grey-color: #535c68;
+$error-color: #d63031;
+$warning-color: #fdcb6e;
+$success-color: #00b894;
+$info-color: #0984e3;
+$grey-color: #636e72;
